Date	Added

2006/08/21
	* Removed config setting "muting_players", and expanded the manner_system
	  config to specify how having negative manner (mute) affects a player (see
	  battle/misc.conf). [Skotlex]
	* Expanded the pk_mode setting from no/yes to 0/1/2. 1 is normal pk_mode,
	  if 2 is used, it makes killing players give you a loss of 5 manner points.
	  [Skotlex]
2006/08/18
	* Added monster_ai&128 to make aggressive mobs ignore that behaviour of
	  always picking Homun targets above player targets regardless of who is
	  closer. [Skotlex]
	* Added guild_aura (skill.conf) setting so you can specify when it works
	  and if it works on the guild-master itself. Defaults to working all the
	  time on everyone except GM. [Skotlex]
2006/08/14
	* Removed support for negative autosave intervals, instead added a
	  minsave_interval setting which specifies which is the minimum time between
	  character saves. Default to 100ms (map_athena.conf). [Skotlex]
	* Modified emergency_call setting to allow for more specific configuration
	  (woe/non-woe, gvg-grounds/non-gvg-grounds, disable from nowarpto maps), see
	  skill.conf for details. [Skotlex]
2006/08/10
	* Removed setting mob_ghostring_fix [Skotlex]
	* Changed setting attack_attr_none to affect all neutral-element attacks.
	  Basicly, this setting is now used to determine who can hit for full damage
	  always when using neutral-attacks (defaults to non-players) [Skotlex]
2006/08/09
	* Change the default of attack_attr_none to all classes except players.
	  This means that pet/mobs/homun will always do normal attacks with
	  no-element modifiers (but elemental reduction cards still apply) [Skotlex]
2006/08/08
	* Removed config settings display_delay_skill_fail and
	  display_snatcher_skill_fail, replaced them with display_skill_fail, which
	  can be used to determine whether you hide ALL skill-failed messages, those
	  from delay, those from Snatcher or those from Envenom (battle/skill.conf)
	  [Skotlex]
2006/08/07